# glommio

./: .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md  cliff.toml  rust-toolchain.toml  taplo.toml  tomlfmt.toml
.cargo/: config.toml
.github/actions/cache-setup/: action.yml
.github/actions/setup-musl/: action.yml
.github/scripts/: run-tests.sh
.github/workflows/: ci.yml  github-release.yml  release-check.yml  third-party_exported.yml  third-party_vulnerabilities.yml  version-bump.yml
docs/: BACKWARD_COMPATIBILITY.md  RELEASE_PROCESS.md  VERSIONING.md
docs/analyze/: MASTER_ANALYSIS_SUMMARY.md  byte_slice_utils_analysis.md  channels_analysis.md  controllers_analysis.md  error_handling_analysis.md  executor_analysis.md  free_list_analysis.md  io_analysis.md  lib_core_analysis.md  low_level_modules_analysis.md  networking_analysis.md  shares_management_analysis.md  sync_primitives_analysis.md  task_system_analysis.md  thread_parking_analysis.md  timer_analysis.md
docs/plans/: semver.md
examples/: Cargo.toml  deadline_writer.rs  defer.rs  hyper_client.rs  hyper_server.rs  ping_pong.rs  sharding.rs  storage.rs
glommio/: Cargo.toml  build.rs  rusturing.c
glommio/benches/: competing_io.rs  shared_channel.rs  spsc_queue.rs
glommio/src/: error.rs  free_list.rs  lib.rs  reactor.rs  shares.rs
glommio/src/channels/: channel_mesh.rs  shared_channel.rs  spsc_queue.rs
glommio/src/controllers/: deadline_queue.rs
glommio/src/executor/: mod.rs
glommio/src/executor/placement/: pq_tree.rs
glommio/src/io/: buffered_file.rs  buffered_file_stream.rs  bulk_io.rs  directory.rs  dma_file.rs  glommio_file.rs  open_options.rs  sched.rs
glommio/src/iou/: probe.rs  sqe.rs
glommio/src/iou/registrar/: mod.rs
glommio/src/net/: mod.rs  stream.rs  tcp_socket.rs  udp_socket.rs  unix.rs
glommio/src/sync/: gate.rs
glommio/src/sys/: blocking.rs  hardware_topology.rs  membarrier.rs  source.rs  sysfs.rs  uring.rs
glommio/src/task/: header.rs  join_handle.rs  raw.rs  task_impl.rs  tests.rs
glommio/src/uring_sys/: mod.rs
glommio/tests/: public_api.rs
glommio/tests/snapshots/: public-api.txt
